fix-header-alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -7,7 +7,9 @@
  body {
   font-size: 20px;
   color: #212529;
-  font-family:  'Helvetica Neue', Helvetica, Arial, sans-serif;
+  /* font-family:  'Helvetica Neue', Helvetica, Arial, sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+  "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", Arial, sans-serif;
   letter-spacing: -0.0em;
 }
 
@@ -61,15 +63,12 @@
 }
 
 p {
-  font-weight: 400;
-  letter-spacing: -0.01em;
-
+  font-weight: 300;
   line-height: 1.5;
   margin: 20px 0;
   font-size: 22;
+  letter-spacing: 0.01em;
   color: rgba(0, 0, 0, 0.4);
-  font-family:  'Helvetica Neue', Helvetica, Arial, sans-serif;
-
 }
 
 p a {
@@ -77,7 +76,6 @@ p a {
 }
 
 input {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 17px;
   margin: 4px;
   color: rgb(214, 214, 214)
@@ -93,17 +91,6 @@ input {
   display: inline-block;
   font-size: 16px;
 }
-
-/* p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  
-  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-} */
 
 h1 {
   font-family: 'Georgia';
@@ -174,7 +161,9 @@ img::-moz-selection {
   position: absolute;
   border-bottom: 1px solid #e9ecef;
   background-color: white;
-  font-family: 'Roboto','Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  /* font-family: 'Roboto','Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+  "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", Arial, sans-serif;
 }
 
 #mainNav .navbar-brand {
